discussion/kv_engine/154054/154054_rev8_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-46017: Refactor: Use ProcessMonitor from platform

The functionality in ParentMonitor was moved into a more generic
library function ProcessMonitor and moved to platform so that
we can reuse the functionality elsewhere (to spawn and monitor
memcached process in testapp and cluster_test).

Extend cluster_test to detect when the underlying memcached
process crash, and if it takes more than a minute to
run (and dump the last 8k of the log file if it does). To
try to give more information on why the program hangs every
now and then on windows.

Change-Id: I48e8b51d852099ccc82b09fbbd498e1b4b1fd0a0

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2021-06-14 07:56:23.000000000
Message: 
Uploaded patch set 8.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-06-14 08:29:24.000000000
Message: 
Patch Set 8: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9842/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/portability/GTest.h:32:10: error: "gtest/gtest.h" file not found [clang-diagnostic-error]
#include <gtest/gtest.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9842/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/portability/GTest.h:32:10:
error: "gtest/gtest.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9842/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19425/ : FAILURE

One of more core files found at the end of the build. Data for post-mortem saved to archived_core_dumps.tar.bz2 under "Build Artifacts". ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19425/ )

Undefined Sanitizer: home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/engines/ep/src/objectregistry.cc:119:49: runtime error: member call on address 0x61d00000e680 which does not point to an object of type "EventuallyPersistentEngine" ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19425/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/8430/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36828/ : SUCCESS

http://cv.jenkins.couchbase.com/job/ming-test2/353/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/31465/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/10492/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11412/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11564/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11838/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-06-14 08:42:13.000000000
Message: 
Patch Set 8:

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9842/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/portability/GTest.h:32:10: error: "gtest/gtest.h" file not found [clang-diagnostic-error]
#include <gtest/gtest.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9842/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/portability/GTest.h:32:10:
error: "gtest/gtest.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9842/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/8430/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36828/ : SUCCESS

http://cv.jenkins.couchbase.com/job/ming-test2/353/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/31465/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/10492/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11412/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11564/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11838/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19427/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Trond Norbye
Date: 2021-06-14 09:05:49.000000000
Message: 
Patch Set 8: Verified+1

Override clang-tidy - folly/portability/Gtest.h was not added in this patch
----------------------------------------------------------------------------------------------------------------------
Author: Trond Norbye
Date: 2021-06-14 09:05:51.000000000
Message: 
Removed Verified-1 by Build Bot <build@couchbase.com>

----------------------------------------------------------------------------------------------------------------------
Author: Dave Rigby
Date: 2021-06-14 10:09:31.000000000
Message: 
Patch Set 8: Code-Review+2
----------------------------------------------------------------------------------------------------------------------
